﻿Version 2.12 (18. Dec. 2021)
- Bugfix:
  Since V2.7 (SHA-1 d9c3ea5f5536b24fab78b9fc214ce538f8e540ca), compression 
  methods QLIN16 and QLOG16 have no effect (data stored uncompressed).
- SQLite update to version 3.37.0

Version 2.11 (2. Feb. 2021)
- Added buildin functions uuid(), uuid_str(X), uuid_blob(X) from uuid.c (sqlite.org)
- c-blosc update to version 1.21.0
- SQLite update to version 3.34.1
- Bugfix: Some error messages weren't displayed
- Bugfix: mksqlite 'status'

Version 2.10 (18. Aug. 2020)
- Added buildin functions ceil() and floor()

Version 2.9 (31. July 2020)
- Updated sqlite to version 3.32.3
- Changed license to BSD-2

Version 2.8 (12. March 2020)
- Updated sqlite to version 3.31.1
- Increased default value for MKSQLITE_CONFIG_MAX_NUM_OF_DBS from 10 to 20

Version 2.7 (4. November 2018)
- Changed license to LGPLv3
- CMake toolchain support. (buildit.m is deprecated now!)
- Separated C-Blosc as optional submodule. mksqlite supports all compression
  types now.
  C-Blosc is integrated as "submodule" in the mksqlite git repository and
  is not part of the mksqlite sources anymore.
  You may compile mksqlite without C-Blosc as required, adjustable per 
  MKSQLITE_CONFIG_USE_BLOSC define.
- Updated MD5 source
  [http://openwall.info/wiki/people/solar/software/public-domain-source-code/md5] 
- SQLite update to V3.25.2
  
Version 2.6 (build 138 - 27. Jun. 2018)
- Bugfix: Charset conversion now for query string itself, not for arguments only.
  Queries like mksqlite( 'SELECT * FROM tbl WHERE name="Dünn"') failed, 
  whereas mksqlite( 'SELECT * FROM tbl WHERE name=?', 'Dünn' ) succeeded.
- sql.m changed: When streaming (option 'typed_BLOBs'=2) and parameter wrapping
  (option 'param_wrapping'=1) are set, it is now possible to pass a single struct
  array for binding.
- Bugfixes on buildit.m
  Addresses mac os builds. THX to Ben Davis for his experiences.
- SQLite update to V3.24

Version 2.5 (build 133 - 9. Feb. 2017)
- Changes on non-SQL commands: